# flex-layout

./: .babelrc  .bazelignore  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .prettierrc.js  .travis.yml  BUILD.bazel  CHANGELOG.md  CODE_REVIEWS.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEV_ENVIRONMENT.md  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  WORKSPACE  angular.json  angular.tsconfig.json  bazel-out  build-config.js  config.js  demo.css  dump.txt  firebase.json  flex-layout.d.ts  flex-layout.metadata.json  flex-layout.umd.js  flex-layout.umd.js.map  gulpfile.js  index.bzl  index.d.ts  index.html  index.js  index.js.map  index.metadata.json  jspm.conf.js  karma.conf.js  (+18 more)
src/apps/demo-app/: .angular-cli.json  BUILD.bazel  README.md  WORKSPACE  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  tslint.json
src/apps/demo-app/e2e/: BUILD.bazel  app.e2e-spec.ts  app.po.ts  protractor.on-prepare.js
src/apps/demo-app/src/: BUILD.bazel  index.html  main.dev.ts  main.prod.ts  main.server.ts  main.ts  module-id.js  polyfills.ts  styles.css  styles.scss  tsconfig.server.json
src/lib/: BUILD.bazel  StyleBaseDirective.ts  index.ts  module.ts  package.json  pkg_replacements.bzl  public-api.ts  public_api.ts  system-config-spec.ts  tsconfig-build.json  tsconfig-demo-app.json  tsconfig-es5.json  tsconfig-spec.json  tsconfig-srcs.json  tsconfig-tests.json  tsconfig.json  version.ts
src/lib/all/: all.ts
src/lib/api/: _styleDirective.ts  flex.ts  index.ts  layout.ts
src/lib/api/core/: base-adapter.spec.ts  base-adapter.ts  base.ts  renderer-adapter.ts  responsive-activation.spec.ts  responsive-activation.ts
src/lib/api/ext/: class.spec.ts  class.ts  hide.spec.ts  img-src.spec.ts  img-src.ts  img-srcset.spec.ts  img-srcset.ts  show-hide.ts  show.spec.ts  style.spec.ts  style.ts
src/lib/bidi/: README.md  bidi.md  dir.ts  directionality.ts  public-api.ts
src/lib/core/: BUILD.bazel  README.md  add-alias.ts  browser-provider.ts  media-change.ts  media-queries-module.ts  module.ts  public-api.ts  server-token.ts  stylesheet-map.ts  tsconfig-build.json
src/lib/extended/: BUILD.bazel  README.md  module.ts  tsconfig-build.json
src/lib/flex/: BUILD.bazel  README.md  flex.ts  module.ts  public-api.ts  tsconfig-build.json
src/lib/flexbox/: _module.ts  all.ts  flexbox-module.ts  index.ts
src/lib/grid/: BUILD.bazel  module.ts  public-api.ts  tsconfig-build.json
src/lib/layout/: layout.ts
src/lib/media-query/: _module.ts  break-points.spec.ts  break-points.ts  index.ts  match-media.spec.ts  match-media.ts  media-change.ts  media-monitor-provider.ts  media-monitor.spec.ts  media-monitor.ts  media-queries.spec.ts  media-queries.ts  media-query-factory.spec.ts  media-query-factory.ts  media-query-module.ts  observable-media-provider.ts  observable-media-service.spec.ts  observable-media-service.ts  observable-media.spec.ts  observable-media.ts  screen-types.ts  server-match-media.ts
src/lib/schematics/: README.md  collection.json  tsconfig.json
src/lib/server/: BUILD.bazel  server-match-media.ts  server-provider.ts  tsconfig-build.json
src/lib/uni/: README.md  module.ts  public-api.ts  tsconfig-build.json
src/lib/utils/: BUILD.bazel  add-alias.ts  auto-prefixer.spec.ts  auto-prefixer.ts  basis-validator.spec.ts  basis-validator.ts  breakpoint-tools.spec.ts  breakpoint-tools.ts  global.ts  index.ts  layout-validator.ts  modernizer.ts  object-extend.spec.ts  object-extend.ts  server-provider.ts  server-stylesheet.ts  style-transforms.spec.ts  style-transforms.ts  style-utils.spec.ts  style-utils.ts
test/: BUILD.bazel  angular-test-init-node-spec.ts  angular-test-init-spec.ts  angular-test-node-spec.ts  browser-providers.js  jasmine-ssr.json  karma-browsers.json  karma-system-config.js  karma-test-shim.js  karma.conf.js  karma.config.ts  node-test-tsconfig.json  patch-testbed.ts  protractor.conf.js  remote_browsers.json  webpack-spec-ssr-bundle.js
test/flexbox/injectors/: LayoutWrap.spec.js
tools/: BUILD.bazel  angular_layout_setup_workspace.bzl  bazel-stamp-vars.sh  bazel.rc  bazel_stamp_vars.sh  defaults.bzl  releases.json
tools/dgeni/: index.js
tools/gulp/: constants.ts  gulpfile.ts  packages.ts  task_helpers.ts  tsconfig.json
tools/gulp/tasks/: aot.ts  build-release.ts  changelog.ts  ci.ts  clang-format.js  clean.ts  components.ts  coverage.ts  default.ts  demo-app.ts  development.ts  docs.ts  e2e.ts  hello-world.ts  lint.ts  payload.ts  publish.ts  release.ts  unit-test-ssr.ts  unit-test.ts  universal.ts  validate-release.ts
tools/gulp/util/: firebase.ts  task-helpers.ts  task_helpers.ts
tools/package-tools/: build-bundles.ts  build-config.ts  build-package.ts  build-release.ts  compile-entry-point.ts  copy-files.ts  entry-point-package-json.ts  index.ts  ngc-compile.ts  rollup-globals.ts  rollup-helpers.ts  tsconfig.json  version-placeholders.ts
tools/package-tools/gulp/: build-scss-task.ts  build-tasks-gulp.ts  watch-files.ts
tools/public_api_guard/: BUILD.bazel  generate-guard-tests.bzl
tools/public_api_guard/lib/: core.d.ts  extended.d.ts  flex.d.ts  grid.d.ts  server.d.ts
tools/screenshot-test/: angular-cli.json  package.json
tools/screenshot-test/functions/: config.json  package.json
tools/screenshot-test/src/: config.json
tools/scripts/: e2e.sh
tools/scripts/browserstack/: start_tunnel.js  start_tunnel.sh
tools/scripts/ci/: after-success.sh  build-and-test.sh  forbidden-identifiers.js
tools/scripts/release/: enact-release.sh  publish-build-artifacts.sh
tools/scripts/sauce/: sauce_connect_setup.sh
tools/test/: browser-providers.js  browser-providers.ts  karma-test-shim.js  karma.conf.js  karma.config.ts  remote_browsers.json
tools/tslint-rules/: deletionTargetRule.ts  missingRollupGlobalsRule.js  missingRollupGlobalsRule.ts  noExposedTodoRule.js  noExposedTodoRule.ts  noRxjsPatchImportsRule.js  noRxjsPatchImportsRule.ts  noViewEncapsulationRule.ts  requireBreakingChangeVersionRule.ts  requireLicenseBannerRule.ts  tsLoaderRule.js  validateDecoratorsRule.ts
(+1213 files in other folders)
