package(default_visibility=["//visibility:public"])

load("//tools:defaults.bzl", "ts_library")

ts_library(
  name = "patch_testbed",
  testonly = 1,
  srcs = ["patch-testbed.ts"],
  deps = [
    "@angular//packages/core/testing"
  ]
)

# Common set-up for all Angular Layout tests.
ts_library(
  name = "angular_test_init",
  testonly = 1,
  deps = [
    "@angular//packages/core/testing",
    "@angular//packages/platform-browser-dynamic/testing",
    ":patch_testbed",
  ],
  # This file *must* end with "spec" in order for ts_web_test to load it.
  srcs = ["angular-test-init-spec.ts"],
)

ts_library(
    name = "angular_test_init_node",
    testonly = 1,
    srcs = ["angular-test-init-node-spec.ts"],
    deps = [
        "@angular//packages/core/testing",
        "@angular//packages/platform-server/testing",
        "@layoutdeps//jasmine-core",
        ":patch_testbed",
        "@layoutdeps//domino",
        "@layoutdeps//reflect-metadata",
        "@layoutdeps//xhr2",
        "@layoutdeps//zone.js",
    ],
    tsconfig = "node-test-tsconfig.json",
)
