package(default_visibility=["//visibility:public"])

load("//tools:sass_bundle.bzl", "sass_bundle")
load("//tools:defaults.bzl", "ng_module", "ng_package")
load("//:packages.bzl", "LAYOUT_PACKAGES", "LAYOUT_TARGETS", "ROLLUP_GLOBALS")

# Root "@angular/flex-layout" entry-point.
ng_module(
  name = "layout",
  srcs = glob(["*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/flex-layout",
  deps = ["//src/lib/%s" % p for p in LAYOUT_PACKAGES],
)

sass_bundle(
  name = "mq_bundle",
  entry_point = '//src/lib/core:sass/_layout-bp.scss',
  output_name = "_mq.scss",
)

# Creates the @angular/flex-layout package published to npm.
ng_package(
  name = "npm_package",
  srcs = ["package.json"],
  entry_point = "src/lib/public_api.js",
  entry_point_name = "layout",
  globals = ROLLUP_GLOBALS,
  data = [
    ":mq_bundle",
  ],
  deps = LAYOUT_TARGETS,
  # TODO(CaerusKaru): Use the npm package for publishing. Right now this is disabled because
  # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
  # files.
  tags = ["manual"],
)
