package(default_visibility = ["//visibility:public"])

# This export allows targets in other packages to reference files that live
# in this package.
exports_files([
    "tsconfig.json",
    # Let devserver and testing targets reference zone.js distro
    "node_modules/zone.js/dist/zone.min.js",
    "node_modules/zone.js/dist/zone-testing-bundle.js",
])
