package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")


ng_module(
  name = "extended",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/flex-layout/extended",
  deps = [
    "//src/lib/core",
    "//src/lib/flex",
  ],
  tsconfig = "//src/lib:tsconfig-build.json",
)

ts_library(
  name = "extended_test_sources",
  testonly = 1,
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@rxjs",
    "@rxjs//operators",
    "//src/lib/core",
    "//src/lib/flex",
    ":extended",
  ],
  tsconfig = "//src/lib:tsconfig-build.json",
)

ts_web_test(
  name = "unit_tests",
  bootstrap = ["//:web_test_bootstrap_scripts"],

  # Do not sort
  deps = [
    "//:tslib_bundle",
    "//:angular_bundles",
    "//:angular_test_bundles",
    "//test:angular_test_init",
    ":extended_test_sources",
  ],
  timeout="short",
)

jasmine_node_test(
    name = "node_tests",
    bootstrap = ["angular_flex_layout/test/angular-test-node-spec.js"],
    deps = [
        "//:tslib_bundle",
        "//:angular_bundles",
        "//:angular_test_bundles",
        ":extended_test_sources",
        "//test:angular_test_node",
    ],
    timeout="short",
)
