package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")


ng_module(
  name = "server",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/flex-layout/server",
  deps = [
    "//src/lib/core",
    "@rxjs",
  ],
  tsconfig = "//src/lib:tsconfig-build.json",
)
