package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "server",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@angular/flex-layout/server",
    tsconfig = "//src/lib:tsconfig-build.json",
    deps = [
        "//src/lib/core",
        "@rxjs",
    ],
)
