package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")
load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")

ts_library(
    name = "utils",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    tsconfig = "//src/lib:tsconfig-build.json",
    deps = [
    ],
)

ts_library(
    name = "utils_test_sources",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src/lib:tsconfig-build.json",
    deps = [
        ":utils",
        "@rxjs",
        "@rxjs//operators",
    ],
)

ts_web_test_suite(
    name = "unit_tests",
    timeout = "short",
    bootstrap = ["//:web_test_bootstrap_scripts"],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        "@io_bazel_rules_webtesting//browsers:firefox-local",
    ],

    # Do not sort
    deps = [
        "//:tslib_bundle",
        "//:angular_bundles",
        "//:angular_test_bundles",
        "//test:angular_test_init",
        ":utils_test_sources",
    ],
)

jasmine_node_test(
    name = "node_tests",
    timeout = "short",
    bootstrap = ["angular_flex_layout/test/angular-test-node-spec.js"],
    deps = [
        ":utils_test_sources",
        "//:angular_bundles",
        "//:angular_test_bundles",
        "//:tslib_bundle",
        "//test:angular_test_node",
    ],
)
