load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "e2e_lib",
    testonly = 1,
    srcs = glob(["src/apps/demo-app/src/**/*.ts"]),
    tsconfig = ":tsconfig.e2e.json",
    deps = [
      "@layoutdeps//@types/jasminewd2",
      "@layoutdeps//jasmine",
      "@layoutdeps//protractor",
    ]
)
