load("//tools:defaults.bzl", "ng_module", "ts_library", "ts_web_test_suite")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "media-query-status",
    srcs = glob(["**/*.ts"], exclude = ["**/*.spec.ts"]),
    assets = glob(["**/*.html"]),
    tsconfig = "//src/apps/demo-app:tsconfig.json",
    deps = [
        "//src/lib:layout",
        "@angular//packages/core",
        "@angular//packages/forms",
        "@angular//packages/router",
        "@layoutdeps//@types",
    ],
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["*.spec.ts"]),
    deps = [
        "media-query-status",
        "@angular//packages/core",
        "@angular//packages/core/testing",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-browser-dynamic/testing",
        "@angular//packages/platform-browser/animations",
    ],
)

ts_web_test_suite(
    name = "test",
    deps = [
        ":test_lib",
    ],
)
