load("//tools:defaults.bzl", "ng_module", "ts_library", "ts_web_test_suite")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "stack-overflow",
    srcs = glob(["**/*.ts"], exclude = ["**/*.spec.ts"]),
    assets = glob(["**/*.html", "**/*.css"]),
    tsconfig = "//src/apps/demo-app:tsconfig.json",
    deps = [
        "//src/lib:layout",
        "@angular//packages/core",
        "@angular//packages/forms",
        "@angular//packages/router",
        "@angular_material//src/lib:material",
        "@layoutdeps//@types",
    ],
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["*.spec.ts"]),
    deps = [
        ":stack-overflow",
        "@angular//packages/core",
        "@angular//packages/core/testing",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-browser-dynamic/testing",
        "@angular//packages/platform-browser/animations",
        "@angular_material//src/lib:material",
    ],
)

ts_web_test_suite(
    name = "test",
    deps = [
        ":test_lib",
    ],
)
