load("//tools:defaults.bzl", "ng_module", "ts_library", "ts_web_test_suite")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary", "sass_library")

package(default_visibility = ["//visibility:public"])

sass_binary(
  name = "complex_column_ordering_scss",
  src = "complex-column-ordering/complex-column-ordering.component.scss",
)

sass_binary(
  name = "grid_area_row_span_scss",
  src = "grid-area-row-span/grid-area-row-span.component.scss",
)

sass_binary(
  name = "grid_column_span_scss",
  src = "grid-column-span/grid-column-span.component.scss",
)

sass_binary(
  name = "hide_custom_bp_scss",
  src = "hide-custom-bp/hide-custom-bp.component.scss",
)

sass_binary(
  name = "mox_holy_grail_scss",
  src = "moz-holy-grail/moz-holy-grail.component.scss",
)

ng_module(
    name = "stack-overflow",
    srcs = glob(["**/*.ts"], exclude = ["**/*.spec.ts"]),
    assets = glob(["**/*.html"]) + [
        ":complex-column-ordering/complex-column-ordering.component.css",
        ":grid-area-row-span/grid-area-row-span.component.css",
        ":grid-column-span/grid-column-span.component.css",
        ":hide-custom-bp/hide-custom-bp.component.css",
        ":moz-holy-grail/moz-holy-grail.component.css",
    ],
    tsconfig = "//src/apps/demo-app:tsconfig.json",
    deps = [
        "//src/lib:layout",
        "@angular//packages/core",
        "@angular//packages/forms",
        "@angular//packages/router",
        "@angular_material//src/lib:material",
        "@layoutdeps//@types",
    ],
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["*.spec.ts"]),
    deps = [
        ":stack-overflow",
        "@angular//packages/core",
        "@angular//packages/core/testing",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-browser-dynamic/testing",
        "@angular//packages/platform-browser/animations",
        "@angular_material//src/lib:material",
    ],
)

ts_web_test_suite(
    name = "test",
    deps = [
        ":test_lib",
    ],
)
